Grant permission bug fix, tabs layout design update, and permission items table not showing right permission fix

--- a/styles/antd.less
+++ b/styles/antd.less
@@ -4,5 +4,6 @@
   "Helvetica Neue", Arial, "Noto Sans", sans-serif, "Apple Color Emoji",
   "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
 
-// @primary-color: black;
+@text-color: rgb(23, 43, 77);
+@text-color-secondary: #7a869a;
 @border-radius-base: 5px;
